gitops/apps/boutique/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/part-of: boutique-aks-devsecops
    app.kubernetes.io/component: frontend
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-boutique.biroltilki.art
      secretName: boutique-dev-tls
  rules:
    - host: dev-boutique.biroltilki.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
